--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@mastra/loggers": "^0.10.0",
     "@mastra/mcp": "^0.10.1",
     "@mastra/memory": "^0.10.1",
-    "zod": "^3.25.43"
+    "@mastra/rag": "^0.10.1",
+    "ai": "^4.3.16",
+    "zod": "^3.25.44"
   },
   "devDependencies": {
     "@types/node": "^22.15.29",
