--- a/package.json
+++ b/package.json
@@ -18,17 +18,30 @@
   "dependencies": {
     "@ai-sdk/google": "^1.2.18",
     "@mastra/core": "^0.10.1",
+    "@mastra/deployer": "^0.10.1",
+    "@mastra/evals": "^0.10.1",
+    "@mastra/fastembed": "^0.10.0",
+    "@mastra/github": "^1.2.0",
+    "@mastra/inngest": "^0.10.1",
     "@mastra/libsql": "^0.10.0",
     "@mastra/loggers": "^0.10.0",
     "@mastra/mcp": "^0.10.1",
+    "@mastra/mcp-registry-registry": "^0.10.0",
     "@mastra/memory": "^0.10.1",
     "@mastra/rag": "^0.10.1",
     "ai": "^4.3.16",
-    "zod": "^3.25.44"
+    "js-tiktoken": "^1.0.20",
+    "js-yaml": "^4.1.0",
+    "json": "^11.0.0",
+    "zod": "^3.25.46"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.15.29",
     "mastra": "^0.10.1",
     "typescript": "^5.8.3"
+  },
+  "overrides": {
+    "@mastra/mcp-docs-server": "^0.0.14"
   }
 }
