--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.18",
+    "@langchain/google-genai": "^0.2.10",
     "@mastra/core": "^0.10.1",
     "@mastra/deployer": "^0.10.1",
     "@mastra/evals": "^0.10.1",
@@ -30,9 +31,13 @@
     "@mastra/memory": "^0.10.1",
     "@mastra/rag": "^0.10.1",
     "ai": "^4.3.16",
+    "date-fns": "^4.1.0",
     "js-tiktoken": "^1.0.20",
     "js-yaml": "^4.1.0",
     "json": "^11.0.0",
+    "langchain": "^0.3.27",
+    "langsmith": "^0.3.29",
+    "mathjs": "^14.5.2",
     "zod": "^3.25.46"
   },
   "devDependencies": {
