--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.18",
+    "@langchain/core": "^0.3.57",
     "@langchain/google-genai": "^0.2.10",
     "@mastra/core": "^0.10.1",
     "@mastra/deployer": "^0.10.1",
