feat(workflows, agents, deps): enhance Inngest workflow, update master agent, and add voice dependencies
- **Inngest Workflow Enhancement**:
  - Modified `intelligentCoordinationWorkflow` in `src/mastra/workflows/inngest/intelligent-coordination-workflow.ts` to remove the default value for `currentIteration` in the input schema, ensuring proper iteration tracking.
  - Added `shouldContinue` property to the input schema of the `final-synthesis` step to handle workflow termination and completion reasons.
  - Included `completionReason` in the final results to provide insights into why a workflow ended.

- **Master Agent Update**:
  - Updated the `masterAgent` configuration in `src/mastra/agents/masterAgent.ts` to set the `tags` to `['agent', 'master', 'debug']`.

- **Dependency Injection**:
  - Added `@mastra/voice-google` and `@mastra/voice-playai` as dependencies in `package.json` to enable voice-related functionalities.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@mastra/mcp-registry-registry": "^0.10.0",
     "@mastra/memory": "^0.10.1",
     "@mastra/rag": "^0.10.1",
+    "@mastra/voice-google": "^0.10.0",
+    "@mastra/voice-playai": "^0.10.0",
     "ai": "^4.3.16",
     "date-fns": "^4.1.0",
     "js-tiktoken": "^1.0.20",
