chore(changelog): update CHANGELOG for v0.0.6 release
- **New Workflows**: Added `agentEvaluationWorkflow`, `agentDeploymentWorkflow`, and `agentMonitoringWorkflow` to enhance agent lifecycle management.
- **Enhancements**: Improved `intelligentCoordinationWorkflow` and `agentDeploymentWorkflow` with schema updates and better logging.
- **New Metrics**: Introduced additional LLM-based metrics in `evals/index.ts` for comprehensive evaluation capabilities.
- **Prompt Management**: Added `evaluation-report-generator` template for generating detailed agent evaluation reports.
- **Fixes**: Resolved issues in `intelligentCoordinationWorkflow` and `agentMonitoringWorkflow` for better agent registration and output handling.

--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "@mastra/voice-playai": "^0.10.0",
     "ai": "^4.3.16",
     "date-fns": "^4.1.0",
+    "isolated-vm": "^5.0.4",
     "js-tiktoken": "^1.0.20",
     "js-yaml": "^4.1.0",
     "json": "^11.0.0",
     "langchain": "^0.3.27",
     "langsmith": "^0.3.30",
     "mathjs": "^14.5.2",
+    "shelljs": "^0.10.0",
+    "vitest": "^3.2.2",
     "zod": "^3.25.49"
   },
   "devDependencies": {
